Fixed <code> pre-spacing and adjusted mobile navbar height

--- a/style.scss
+++ b/style.scss
@@ -52,7 +52,7 @@ body {
 
   @media (max-width: 850px) {
     width: 100%;
-    height: 200px;
+    height: 170px;
     overflow: auto;
     border-right: none;
     border-bottom: 5px solid #595f60;
@@ -123,11 +123,13 @@ main {
     @media (max-width: 480px) {
       margin-left: 15px;
       margin-right: 15px;
+      font-size: .75em;
     }
 
-    @media (max-width: 320px) {
+    @media (max-width: 375px) {
       margin-left: 0px;
       margin-right: 0px;
+      
     }
   }
   // Mozilla MDN link
